# scaffold-templates

golang-server/: .env.example  .gitignore  .mockery.yaml  Makefile  README.md  go.mod
golang-server/.github/workflows/: ci.yaml
python-server/: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
python-server/.github/workflows/: ci.yaml
python-server/src/: settings.py
react-native-app/: .env.example  .gitignore  Makefile  README.md  babel.config.js  eslint.config.mjs  package.json  tsconfig.json
react-native-app/.github/workflows/: ci.yaml
react-native-app/__tests__/: App.test.tsx
react-native-app/src/: App.tsx
